survey-salesforce/salesforce-app/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>mobilesurveys_Id__c</fullName>
        <externalId>true</externalId>
        <label>mobilesurveys Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mobilesurveys_LastCheckInDate__c</fullName>
        <label>Last Check In Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_LastCheckInDevice__c</fullName>
        <label>mobilesurveys Last Check In Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Username__c</fullName>
        <label>Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Surveyors</fullName>
        <columns>FULL_NAME</columns>
        <columns>mobilesurveys_Username__c</columns>
        <columns>mobilesurveys_Password__c</columns>
        <columns>mobilesurveys_Status__c</columns>
        <columns>mobilesurveys_LastCheckInDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>mobilesurveys_Username__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Surveyors</label>
    </listViews>
</CustomObject>